Merge: client: fix charts height
Closes #2944

Squashed commit of the following:

commit c8c6a0533df0123f458603cc204f1f796b9e59d8
Author: Ildar Kamalov <ik@adguard.com>
Date:   Tue Apr 13 10:56:02 2021 +0300

    client: fix charts height

--- a/client/src/components/ui/Card.css
+++ b/client/src/components/ui/Card.css
@@ -112,6 +112,8 @@
 }
 
 .card-wrap {
+    display: flex;
+    flex-direction: column;
     height: 100%;
 }
 
